<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.exploitr.biology.blooddroid.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/parental_blood_type_attributes"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/main"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/main"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="@+id/main" />

        <TextView
            android:id="@+id/fathertypetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/father_blood_type"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_creator="0"
            app:layout_constraintTop_toBottomOf="@+id/mainText" />

        <Spinner
            android:id="@+id/fathertype"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:layout_constraintBaseline_creator="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/fatherrhtype"
            app:layout_constraintTop_toBottomOf="@+id/fathertypetext"
            tools:layout_constraintBaseline_creator="0"
            tools:layout_constraintLeft_creator="0" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/fatherrhtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="75dp"
            android:padding="8dp"
            android:text="@string/rh"
            app:layout_constraintBottom_toBottomOf="@+id/fathertype"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/fathertypetext"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/mainText"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="0"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/mothertypetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="100dp"
            android:text="@string/mother_blood_type"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainText" />

        <Spinner
            android:id="@+id/mothertype"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mothertypetext" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/motherrhtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/rh"
            app:layout_constraintBottom_toBottomOf="@+id/mothertype"
            app:layout_constraintHorizontal_bias="0.862"
            app:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/mothertypetext"
            app:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/mainText"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="0" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/child_back"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/child_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_blood_type_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="18sp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.055" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_a_chance_text"
            android:textSize="14sp"
            android:typeface="monospace"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/child_header"
            android:id="@+id/typeatext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_b_chance_text"
            android:typeface="monospace"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/child_header"
            android:id="@+id/typebtext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_ab_chance_text"
            android:typeface="monospace"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/child_header"
            android:id="@+id/typeabtext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_o_chance_text"
            android:typeface="monospace"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toBottomOf="@+id/child_header"
            android:id="@+id/typeotext" />

        <TextView
            android:id="@+id/typerhtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rh_factor_text"
            android:typeface="monospace"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="140dp"
            app:layout_constraintTop_toBottomOf="@+id/child_header" />

        <TextView
            android:id="@+id/typeavalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dummytext"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/typeatext"
            app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintLeft_toRightOf="@+id/typeatext"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/typebvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dummytext"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/typebtext"
            app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintLeft_toRightOf="@+id/typebtext"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/typeabvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dummytext"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/typeabtext"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintLeft_toRightOf="@+id/typeabtext"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/typeovalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dummytext"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/typeotext"
            app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintLeft_toRightOf="@+id/typeotext"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/rhvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dummytext"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/typerhtext"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintLeft_toRightOf="@+id/typerhtext"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
